--- a/index_with_gallery.html
+++ b/index_with_gallery.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Elias Mendoza | OMS-II Portfolio</title>
     <style>
@@ -92,6 +93,25 @@
 
     <footer>
         <p>&copy; 2025 Elias Mendoza | Portfolio for Educational Use</p>
+    
     </footer>
+
+    <section>
+        <h2>🖼️ Photo Gallery</h2>
+        <div class="gallery">
+            <img src="Media/health_fair_photos/photo1.jpg" alt="Health Fair Photo 1">
+            <img src="Media/health_fair_photos/photo2.jpg" alt="Health Fair Photo 2">
+            <img src="Media/health_fair_photos/photo3.jpg" alt="Health Fair Photo 3">
+        </div>
+    </section>
+
+    <section class="contact">
+        <h2>📬 Contact</h2>
+        <p>Email: <a href="mailto:elias.mendoza@bcom.edu">elias.mendoza@bcom.edu</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/eliasmendoza" target="_blank">linkedin.com/in/eliasmendoza</a></p>
+    </section>
+</body>
+</html>
+
 </body>
 </html>
